Fixed nginx config, permitted cors o all